--- a/src/app/add.appointment/add.appointment.component.html
+++ b/src/app/add.appointment/add.appointment.component.html
@@ -1,1 +1,20 @@
-<p>add.appointment works!</p>
+<form [formGroup]="myForm" (ngSubmit)="onSubmit()">
+    <mat-form-field appearance="fill">
+        <mat-label>Name</mat-label>
+        <input matInput formControlName="name" required>
+        <mat-error *ngIf="myForm.get('name')?.invalid && myForm.get('name')?.touched">
+            Name is required.
+        </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" required>
+        <mat-error *ngIf="myForm.get('email')?.invalid && myForm.get('email')?.touched">
+            <span *ngIf="myForm.get('email')?.errors?.['required']">Email is required.</span>
+            <span *ngIf="myForm.get('email')?.errors?.['email']">Enter a valid email.</span>
+        </mat-error>
+    </mat-form-field>
+
+    <button mat-raised-button color="primary" type="submit" [disabled]="myForm.invalid">Submit</button>
+</form>
