--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -175,4 +175,14 @@
   }
 </style>
 
+<mat-toolbar>
+  <span>Calendar App</span>
+</mat-toolbar>
+
+<nav>
+  <a routerLink="/home">Home</a>
+  <a routerLink="/day">Day</a>
+  <a routerLink="/add">Add appointment</a>
+</nav>
+
 <router-outlet />
