--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,8 +1,8 @@
 <div class="calendar">
     <header>
-        <button (click)="changeMonth(-1)">Previous</button>
+        <button mat-button (click)="changeMonth(-1)">Previous</button>
         <h2>{{ currentMonth.format('MMMM YYYY') }}</h2>
-        <button (click)="changeMonth(1)">Next</button>
+        <button mat-button (click)="changeMonth(1)">Next</button>
     </header>
     <div class="days">
         <div class="day" *ngFor="let day of daysInMonth">
