--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,13 +176,7 @@
 </style>
 
 <mat-toolbar>
-  <span routerLink="/home">Calendar App</span>
+  <a routerLink="/home">Calendar App</a>
 </mat-toolbar>
-
-<nav>
-  <a routerLink="/home">Home</a>
-  <a routerLink="/day">Day</a>
-  <a routerLink="/add">Add appointment</a>
-</nav>
 
 <router-outlet />
