--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -1,8 +1,12 @@
-Existing appointments:
-<mat-list role="list">
-    <mat-list-item role="listitem">Item 1</mat-list-item>
-    <mat-list-item role="listitem">Item 2</mat-list-item>
-    <mat-list-item role="listitem">Item 3</mat-list-item>
-</mat-list>
+<div class="container">
+    <h3>{{day}}</h3>
 
-<button (click)="goToAddNewAppointment()" mat-button>Add New Appointment</button>
+    Existing appointments:
+    <mat-list role="list">
+        <mat-list-item role="listitem">Item 1</mat-list-item>
+        <mat-list-item role="listitem">Item 2</mat-list-item>
+        <mat-list-item role="listitem">Item 3</mat-list-item>
+    </mat-list>
+
+    <button (click)="goToAddNewAppointment()" mat-button>Add New Appointment</button>
+</div>
