--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -5,8 +5,8 @@
         <button mat-button (click)="changeMonth(1)">Next</button>
     </header>
     <div class="days">
-        <div (click)="goToDay(day.toISOString().split('T')[0])" class="day" *ngFor="let day of daysInMonth">
-            <span>{{ day.date() }}</span>
+        <div (click)="goToDay(day.format('YYYY-MM-DD'))" class="day" *ngFor="let day of daysInMonth">
+            <span>{{ day.format('D') }}</span>
         </div>
     </div>
 </div>
