--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -3,8 +3,10 @@
 
 
     <h4>Existing appointments:</h4>
-    <div role="list" *ngFor="let appointment of appointmentList">
-        <div role="listitem">{{appointment.name}}</div>
+    <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)" role="list">
+        @for (appointment of appointmentList; track appointment) {
+        <div class="example-box" cdkDrag>{{appointment.name}}</div>
+        }
     </div>
 
     <button (click)="goToAddNewAppointment()" mat-button>Add New Appointment</button>
