--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -5,7 +5,7 @@
     <h4>Existing appointments:</h4>
     <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)" role="list">
         @for (appointment of appointmentList; track appointment) {
-        <div class="example-box" cdkDrag>{{appointment.name}}</div>
+        <div class="example-box" cdkDrag>{{appointment.name}} <button mat-button (click)="delete($index)">X</button></div>
         } @empty {
         <div class="example-box">There are no appointments.</div>
         }
