--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -5,8 +5,9 @@
         <button mat-button (click)="changeMonth(1)">Next</button>
     </header>
     <div class="days">
-        <div [attr.has-appointments]="areThereAppointments(day.format('YYYY-MM-DD'))"
-            (click)="goToDay(day.format('YYYY-MM-DD'))" class="day" *ngFor="let day of daysInMonth">
+        <div tabindex="0" [attr.has-appointments]="areThereAppointments(day.format('YYYY-MM-DD'))"
+            (keyup)="goToDay(day.format('YYYY-MM-DD'))" (click)="goToDay(day.format('YYYY-MM-DD'))" class="day"
+            *ngFor="let day of daysInMonth">
             <span>{{ day.format('D') }}</span>
         </div>
     </div>
